macros/tests/gateway_config/expect-array.stderr
error: config should be an array
 --> $DIR/expect-array.rs:5:9
  |
5 |         42
  |         ^^
