macros/tests/gateway_config/expect-array.rs
use macros::gateway_config;

fn main() {
    gateway_config! {
        42
    }
}
